# Geant4OGSsim

./: CMakeLists.txt  FindGeant4.cmake  FindROOT.cmake  README.md  init_vis.mac  main.cc  readGeant4.cpp  vis.mac
include/: ActionInitialization.hh  DetectorConstruction.hh  DetectorSD.hh  EventAction.hh  MaterialDefinitions.hh  PrimaryGeneratorAction.hh  Run.hh  RunAction.hh  SteppingAction.hh
src/: ActionInitialization.cc  DetectorConstruction.cc  DetectorSD.cc  EventAction.cc  MaterialDefinitions.cc  PrimaryGeneratorAction.cc  Run.cc  RunAction.cc  SteppingAction.cc
